guardado pagina inicial

--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,16 @@
   width: 102px;
   height: 43px;
 }
+.tagline{
+  width: 146px;
+  height: 15px;
+}
+.first-slide{
+  width: 100%;
+}
+.second-slide{
+width: 50%;
+}
+.third-slide{
+width: 50%;
+}
